phpapp/phpapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - mariadb-kester.kester.pro
      secretName: phpapp-tls
  rules:
    - host: "mariadb-kester.kester.pro"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: phpapp-lon
                port:
                  number: 80
